--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   border-radius: 5px;
   border:1px #009688 solid;
   padding: 10px 20px;
+  background-color: #f2f2f2;
 }
 .button-style {
   padding: 10px 80px;
